# Mod-Manager-Migrator

./: .env  .gitignore  Changelog.md  Hardlinks.md  LICENSE  Mod-Manager-Migrator.code-workspace  README.md  build.bat  build.py  build_nuitka.bat  compile_qrc.bat  compile_qts.bat  core.py  core_alt.py  core_old.py  generate_nm_description.bat  load_msgpack.py  main.py  msgpack2order.py  mypy.ini  pyproject.toml  requirements.txt  setup_venv.bat  todo  update.json  update_lupdate_file.bat  update_qts.bat
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint_and_test.yaml
concepts/Illustrator/: Mod-Manager-Labels.ai
data/: style.qss
data/locales/: de-DE.json  en-US.json
leveldb/: plyvel-1.3.0-cp39-cp39-win_amd64.whl
misc_assets/: HeadLineGH.ai  nm_description.bbc
misc_assets/modpage/: ModpageAssets.url
res/: base_stylesheet.qss  blacklist  dark_stylesheet.qss  dark_theme.json  ext_resources.json  games.json  light_stylesheet.qss  light_theme.json  resources.qrc
res/default_configs/: app.json
res/loc/: de.ts
scripts/: build.py  dump_leveldb_to_json.py  generate_nm_description.py  generate_qt_lupdate_file.py  generate_qt_project_file.py
src/: app.py  app_context.py  core.py  debug.json  dialogs.py  empty_app.py  games.py  loadingdialog.py  main.py  managers.py  test.py  utils.py
src/core/archive/: __init__.py  archive.py  rar.py  sevenzip.py  zip.py
src/core/config/: _base_config.py  app_config.py  base_config.py
src/core/game/: __init__.py  enderal.py  enderalse.py  enderalse_gog.py  exceptions.py  fallout3.py  fallout4.py  falloutnv.py  game.py  oblivion.py  skyrim.py  skyrimse.py  skyrimse_gog.py
src/core/instance/: instance.py  metadata.py  mod.py  tool.py
src/core/migrator/: file_blacklist.py  migration_report.py  migrator.py
src/core/mod_manager/: __init__.py  exceptions.py  instance_info.py  mod_manager.py
src/core/mod_manager/modorganizer/: exceptions.py  mo2_instance_info.py  modorganizer.py
src/core/mod_manager/vortex/: exceptions.py  profile_info.py  vortex.py
src/core/utilities/: base_enum.py  blocking_thread.py  cache.py  datetime.py  downloader.py  env_resolver.py  exception_handler.py  exceptions.py  filesystem.py  filter.py  ini_file.py  leveldb.py  licenses.py  localisation.py  logger.py  path_limit_fixer.py  process_runner.py  progress_update.py  qt_res_provider.py  scale.py  thread.py  trim.py  unique.py  updater.py
src/data/: style.qss
src/data/icons/: icons.7z
src/data/locales/: de-DE.json  en-US.json  zh-CN.json
src/data/locales/de_DE/: main.json
src/data/locales/en_US/: main.json
src/data/locales/zh_CN/: main.json
src/dialogs/: __init__.py  dest_dialog.py  error_dialog.py  game_dialog.py  settings_dialog.py  source_dialog.py
src/games/: __init__.py  enderal.py  enderalse.py  enderalse_gog.py  fallout3.py  fallout4.py  falloutnv.py  game.py  oblivion.py  skyrim.py  skyrimse.py  skyrimse_gog.py
src/managers/: __init__.py  instance.py  modorganizer.py  vortex.py
src/ui/: main_widget.py  main_window.py  menubar.py  statusbar.py
src/ui/instance/: instance_overview_widget.py  instance_widget.py  modlist_menu.py  modlist_widget.py  tools_menu.py  tools_widget.py
src/ui/instance_creator/: __init__.py  instance_creator.py  modorganizer.py  vortex.py
src/ui/instance_selector/: __init__.py  instance.py  instance_selector.py  modorganizer.py  vortex.py
src/ui/migrator/: migration_report_dialog.py  migrator_widget.py
src/ui/migrator/instance_creator/: __init__.py  base_creator_widget.py  instance.py  instance_creator.py  instance_creator_widget.py  modorganizer_creator_widget.py  vortex_creator_widget.py
src/ui/migrator/instance_selector/: __init__.py  base_selector_widget.py  instance_selector.py  instance_selector_widget.py  modorganizer.py  modorganizer_selector_widget.py  vortex.py  vortex_selector_widget.py
src/ui/settings/: settings_dialog.py  settings_widget.py
src/ui/utilities/: __init__.py  icon_provider.py  stylesheet_processor.py  tree_widget.py  ui_mode.py
src/ui/widgets/: about_dialog.py  browse_edit.py  copy_edit.py  error_dialog.py  error_summary_dialog.py  link_button.py  loading_dialog.py  log_window.py  menu.py  paste_edit.py  search_bar.py  shadow_scroll_area.py  smooth_scroll_area.py  smooth_scroll_bar.py  updater_dialog.py
src/utilities/: __init__.py  conflict_graph.py  exceptions.py  ini_parser.py  localisation.py  mod.py  mod_item.py  stdout_pipe.py  theme.py  vortex_database.py
src/widgets/: __init__.py  loading_dialog.py
stubs/darkdetect/: __init__.pyi
stubs/plyvel/: __init__.pyi
tests/: base_test.py  utils.py
tests/core/: base_test.py
tests/core/_setup/: mock_path.py  mock_plyvel.py
tests/core/config/: test_app_config.py
tests/core/game/: __init__.py  test_game.py
tests/core/instance/: test_instance.py
tests/core/migrator/: test_file_blacklist.py  test_migrator.py
tests/core/mod_manager/: test_modorganizer.py  test_vortex.py
tests/core/tests/: test_mock_path.py
tests/core/utilities/: test_datetime.py  test_env_resolver.py  test_leveldb.py  test_scale.py
tests/data/: empty_state.v2.json  full_state.v2.json  ready_state.v2.json  state.v2.json
tests/data/mod_instance/: ModOrganizer.ini  ModOrganizer_global.ini  state.v2.json
tests/data/mod_instance/overwrite/: test.txt
tests/data/mods/Metadata Test Mod/: meta.ini
tests/data/skyrimse/: userlist.yaml
tests/data/skyrimse/masterlist/: masterlist.yaml
tests/data/skyrimse_mods/: __vortex_staging_folder
tests/ui/: base_test.py  ui_test.py
tests/ui/_setup/: clipboard.py
tests/ui/instance_creator/: test_modorganizer.py
tests/ui/migrator/: test_migrator_widget.py
tests/ui/widgets/: test_copy_entry.py  test_paste_entry.py  test_search_bar.py
(+51 files in other folders)
