[project]
name = "mod-manager-migrator"
version = "3.0.0-alpha-1"
description = "Mod Manager Migrator"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Cutleast", email = "cutleast@gmail.com" }]
license = { file = "LICENSE" }
dependencies = [
    "comtypes",
    "darkdetect",
    "jstyleson",
    "plyvel-ci",
    "py7zr",
    "pydantic",
    "pyside6",
    "pyuac",
    "pywin32",
    "qtawesome<1.4.0",
    "rarfile",
    "requests",
    "semantic-version",
    "virtual-glob",
]

[dependency-groups]
dev = [
    "cx-freeze",
    "mypy",
    "pyfakefs",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-qt",
]

[tool.cxfreeze]
executables = [
    { script = "src/main.py", base = "gui", target_name = "MMM.exe", icon = "res/icons/mmm.ico", copyright = "Attribution-NonCommercial-NoDerivatives 4.0 International" },
    { script = "src/main.py", base = "console", target_name = "MMM_cli.exe", icon = "res/icons/mmm.ico", copyright = "Attribution-NonCommercial-NoDerivatives 4.0 International" },
]

[tool.cxfreeze.build_exe]
replace_paths = [["*", ""]]
packages = ["ctypes"]
includes = ["ctypes.wintypes"]
excludes = ["tkinter", "unittest"]
zip_include_packages = ["encodings", "PySide6", "shiboken6"]
include_path = "src"
build_exe = "dist/MMM"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "[%(asctime)s.%(msecs)03d][%(levelname)s][%(name)s.%(funcName)s]: %(message)s"
