[project]
name = "mod-manager-migrator"
version = "3.0.0-alpha-2"
description = "Mod Manager Migrator"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Cutleast", email = "cutleast@gmail.com" }]
license = { file = "LICENSE" }
dependencies = [
    "comtypes",
    "darkdetect",
    "jstyleson",
    "plyvel-ci",
    "py7zr",
    "pydantic",
    "pyside6",
    "pyuac",
    "pywin32",
    "qtawesome",
    "rarfile",
    "requests",
    "semantic-version",
    "virtual-glob",
]

[dependency-groups]
dev = [
    "cx-freeze<8.1.0",
    "pyfakefs",
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-qt",
]

[tool.cxfreeze]
executables = [
    { script = "src/main.py", base = "gui", target_name = "MMM.exe", icon = "res/icons/mmm.ico", copyright = "Attribution-NonCommercial-NoDerivatives 4.0 International" },
    { script = "src/main.py", base = "console", target_name = "MMM_cli.exe", icon = "res/icons/mmm.ico", copyright = "Attribution-NonCommercial-NoDerivatives 4.0 International" },
]

[tool.cxfreeze.build_exe]
replace_paths = [["*", ""]]
packages = ["ctypes"]
includes = ["ctypes.wintypes"]
excludes = ["tkinter", "unittest"]
zip_include_packages = ["encodings", "PySide6", "shiboken6"]
include_path = "src"
build_exe = "dist/MMM"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "[%(asctime)s.%(msecs)03d][%(levelname)s][%(name)s.%(funcName)s]: %(message)s"

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
exclude = ["**/__pycache__"]
stubPath = "./stubs"

# Check here for a full list of options: https://github.com/microsoft/pyright/blob/main/docs/configuration.md#diagnostic-settings-defaults
deprecateTypingAliases = false
reportConstantRedefinition = true
reportDeprecated = "warning"
reportDuplicateImport = true
reportIncompleteStub = "warning"
reportIncompatibleMethodOverride = false
reportInconsistentConstructor = "warning"
reportImplicitOverride = "warning"
reportInvalidStubStatement = "warning"
reportMatchNotExhaustive = false
reportMissingImports = "error"
reportMissingParameterType = "error"
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportPrivateUsage = "warning"
reportShadowedImports = "warning"
reportTypeCommentUsage = "information"
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryCast = "information"
reportUnnecessaryComparison = "information"
reportUnnecessaryContains = "information"
reportUnnecessaryIsInstance = "information"
reportUnnecessaryTypeIgnoreComment = "information"
reportUnusedClass = "warning"
reportUnusedImport = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedNamedTuple = "error"
reportWildcardImportFromLibrary = "warning"
strictDictionaryInference = true
strictListInference = true
strictSetInference = true
